# cppWebserver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cpp  main.yml  workflow.yml
src/: CMakeLists.txt  HttpClient.cpp  HttpParser.cpp  HttpParser.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpServer.cpp  HttpServer.hpp  Response.cpp  Response.hpp  Sender.hpp  Utils.hpp  example  example.cpp  iterativeServerTCP.cpp  main.cpp  sender.cpp
src/example.dSYM/Contents/Resources/DWARF/: example
src/html/: about.html  index.html
test/: CMakeLists.txt  ReceiverTests.cpp  ResponseTests.cpp  SenderTests.cpp
test/mocks/: mock_get_request.txt
